ErLang学习用项目

--- a/src/23_chapter/error_log/elog2.config
+++ b/src/23_chapter/error_log/elog2.config
@@ -1,5 +1,5 @@
 
 [{sasl, [
-	%% All reports go to this file
+	%% 所有报告信息都被存入路径中的文件
 	{sasl_error_logger, {file, "/Users/joe/error_logs/THELOG"}}
 ]}].
